# firefeed-api

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.internal  LICENSE  README.md  __init__.py  background_tasks.py  cache.py  cli.py  dependencies.py  di_container.py  docker-compose.yml  errors.py  main.py  postgres-init.Dockerfile  postgres-pgvector.Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_di_container.py  test_firefeed_core_import.py  versioning.py
.github/: __init__.py
.github/workflows/: ci.yml
config/: __init__.py  database_config.py  environment.py  formatters.py  logging_config.py  redis_config.py
database/: __init__.py  init.py  init.sh  migrations.py  migrations.sql
database/init/: 01-init-user.sh  02-migrations.sql  03-seed-data.sql
docs/: __init__.py  api-contracts.md  api-reference.md  openapi_config.py
internal/: __init__.py  auth.py  main.py  middleware.py  models.py
middleware/: __init__.py  public_auth.py
models/: __init__.py  api_key.py  category.py  email_verification_token.py  media_cache.py  media_file.py  password_reset_token.py  public_models.py  rss_feed.py  rss_item.py  source.py  telegram_chat.py  telegram_message.py  telegram_user.py  translation.py  translation_cache.py  user.py  user_category.py  user_rss_feed.py  user_session.py
monitoring/: __init__.py  health.py  metrics.py
repositories/: __init__.py  api_key_repository.py  category_repository.py  interfaces.py  rss_feed_repository.py  rss_item_repository.py  source_repository.py  user_repository.py
routers/: __init__.py  internal.py  public_auth.py  public_rss.py  public_users.py
scripts/: README.md  __init__.py  dev-setup.sh
services/: __init__.py  api_key_service.py  cache_service.py  category_service.py  database_service.py  email_service.py  maintenance_service.py  media_service.py  public_api_client.py  rate_limit_service.py  redis_service.py  rss_service.py  session_service.py  source_service.py  telegram_service.py  text_analysis_service.py  translation_service.py  user_service.py
tests/: README.md  __init__.py  conftest.py  test_backward_compatibility.py  test_performance.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_external_api_compatibility.py  test_internal_api.py
tests/unit/api/: __init__.py
tests/unit/config/: __init__.py
tests/unit/core/: __init__.py
tests/unit/database/: __init__.py
tests/unit/exceptions/: __init__.py
tests/unit/models/: __init__.py
tests/unit/repositories/: __init__.py
tests/unit/services/: __init__.py
tests/unit/utils/: __init__.py
