[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firefeed-api"
version = "1.0.0"
description = "API service for FireFeed RSS reader"
authors = [{name = "FireFeed Team", email = "mail@firefeed.net"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.1",
    "redis>=5.0.1",
    "aioredis>=2.0.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.7",
    "httpx>=0.25.2",
    "aiohttp>=3.9.1",
    "aiosmtplib>=2.0.2",
    "cachetools>=5.3.2",
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
    "dependency-injector>=4.43.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
    "mkdocstrings>=0.22.0",
    "mkdocstrings-python>=1.1.1",
    "pre-commit>=3.5.0",
    "watchdog>=3.0.0",
    "rich>=13.7.0",
    "ipdb>=0.13.13",
    "pdbpp>=0.10.3",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.1",
]

[project.urls]
Homepage = "https://github.com/firefeed/firefeed-api"
Repository = "https://github.com/firefeed/firefeed-api"
Issues = "https://github.com/firefeed/firefeed-api/issues"
Documentation = "https://firefeed.github.io/firefeed-api/"

[tool.setuptools.packages.find]
include = ["firefeed_api*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"firefeed_api" = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [
    "tests/",
    "migrations/",
    "alembic/",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["S101"]      # Allow assert statements in tests

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
strict_equality = true

[mypy-tests]
disallow_untyped_defs = false

[mypy-alembic]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-config --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["firefeed_api"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
    "*/migrations/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "@abstract",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError()",
    "@unittest.skip",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88